--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -20,7 +20,6 @@
         app:srcCompat="@drawable/round_button" />
 
 
-
     <TextView
         android:id="@+id/tvProfileName"
         android:layout_width="wrap_content"
@@ -30,10 +29,9 @@
         android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="@+id/tvProfileImage"
-        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/tvProfileImage"
         app:layout_constraintTop_toBottomOf="@+id/tvProfileImage"
-        app:layout_constraintVertical_bias="0.052" />
+        app:layout_constraintVertical_bias="0.106" />
 
     <TextView
         android:id="@+id/tvProfileEmail"
@@ -71,6 +69,16 @@
         app:layout_constraintStart_toStartOf="@+id/btnProfileSingout"
         app:layout_constraintTop_toBottomOf="@+id/tvProfileEmail"
         app:layout_constraintVertical_bias="0.742" />
+
+    <ImageButton
+        android:id="@+id/bookshelf"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/icon_bookshelf"
+        app:layout_constraintBottom_toTopOf="@+id/btnProfileSingout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvProfileEmail" />
 
     <ImageButton
         android:id="@+id/camera"
